--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=spring-cloud-config
 server.port=8888
+
+spring.profiles.active=native
 spring.cloud.config.server.native.searchLocations=classpath:/properties
