--- a/src/main/resources/properties/get.properties
+++ b/src/main/resources/properties/get.properties
@@ -1,9 +1,8 @@
-spring.application.name=microservice-get
+spring.application.name=get
 spring.jpa.database = POSTGRESQL
 spring.datasource.platform = postgres
 spring.jpa.show-sql = true
-spring.datasource.driver-class-name = org.postgresql.Driver
-
+spring.datasource.driverClassName = org.postgresql.Driver
 
 spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username = postgres
